--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 *{
     padding: 0;
     margin: 0;
@@ -65,6 +62,7 @@ body{
 
 .instagram_logo{
     height: 3rem;
+    
 }
 
 .profile-photo{
@@ -73,6 +71,7 @@ body{
     align-items: center;
     border-radius: 50%; 
     overflow: hidden;
+    margin-top: 5px;
 }
 
 .profile-photo img{
@@ -84,6 +83,7 @@ body{
     color: #ffffff;
     padding: 8px;
     border-radius: 4px;
+    margin-top: 10px;
 }
 
 .instagram_logout{
@@ -123,11 +123,11 @@ body{
 }
 
 .app-download:nth-child(1){
-    background-image:url('./img/apple.png');
+    background-image:url('https://i.ibb.co/mbwWV9y/apple.png');
 }
 
 .app-download:nth-child(2){
-    background-image: url('./img/play_store.png');
+    background-image: url('https://i.ibb.co/LC6nCXX/play-store.png');
 }
 
 /*  media queries   */
